src/styles/globals.css
/* ... */
* {
  box-sizing: border-box;
  scroll-behavior: smooth;
  /* border: none; */
  outline: none;
  padding: 0;
  margin: 0;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: var(--vazir-font);
  min-height: 100vh;
  user-select: none;
  background-color: rgb(var(--background-app-rgb));
}

button {
  cursor: pointer;
  outline: none;
}
button:disabled,
button:disabled:hover {
  cursor: not-allowed;
  background-color: rgb(var(--color-primary-200), 0.5);
  border-color: rgb(var(--color-primary-200), 0.5);
  color: rgb(var(--color-secondary-700), 0.5);
  pointer-events: none;
  box-shadow: none;
}

/* inupt number */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  /* display: none; <- Crashes Chrome on hover */
  -webkit-appearance: none;
  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

input[type="number"] {
  -moz-appearance: textfield; /* Firefox */
}

/* TABLE */

table {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

table .title-row {
  background-color: rgb(var(--color-secondary-100));
}

table td,
table th {
  text-align: right;
  white-space: nowrap;
}

table th {
  padding: 1rem;
  color: rgb(var(--color-secondary-600));
  font-size: 0.9rem;
}
a {
  display: block;
}
table td {
  font-size: 0.85rem;
  padding: 1rem;
  color: rgb(var(--color-secondary-600));
}

table tr {
  border-bottom: 1px solid rgb(var(--color-secondary-200));
  transition: background-color 0.2s ease-out;
}

table tr:hover {
  background-color: rgb(var(--color-secondary-100));
}

table tr:last-child {
  border: none;
}

/* comment  indicator */

.post-comments .post-comments__answer {
  position: relative;
}
.post-comments .post-comments__answer::before {
  content: "";
  display: block;
  height: 100%;
  position: absolute;
  right: -15px;
  top: -13px;
  width: 3px;
  background-color: rgb(var(--color-secondary-200));
}

.post-comments .post-comments__answer .answer-item::before {
  content: "";
  display: block;
  height: 3px;
  position: relative;
  right: -31px;
  top: 57px;
  width: 15px;
  background-color: rgb(var(--color-secondary-200));
  z-index: 10;
}

.post-comments .post-comments__answer .last-item:after {
  /* content: "";
  display: block;
  height: calc(100% - 80px);
  position: absolute;
  right: -15px;
  top: 76px;
  width: 4px;
  background-color: rgb(var(--color-secondary-200)); */
}

@media (max-width: 640px) {
  .post-comments .post-comments__answer::before,
  .post-comments .post-comments__answer .last-item:after {
    display: none;
  }
  .post-comments .post-comments__answer .answer-item::before {
    width: 3px;
    height: 14px;
    right: 11px;
    top: -13px;
    position: absolute;
  }
}

.button-group {
  display: flex;
  align-items: stretch;
  flex-wrap: wrap;
  gap: 8px;
  border: 1px solid rgb(var(--color-secondary-300));
  border-bottom: transparent;
  padding: 8px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.button-group button {
  display: flex;
  align-items: center;
  gap: 4px;
  padding: 4px 8px;
  /* border: 1px solid rgb(var(--color-secondary-200)); */
  border-radius: 4px;
  color: rgb(var(--color-secondary-600));
  font-size: 14px;
  line-height: 28px;
}
.button-group button svg {
  width: 16px;
  height: 16px;
}
.button-group button.is-active {
  color: rgb(var(--color-secondary-700));
  background-color: rgb(var(--color-secondary-100));
  font-weight: 500;
}

.ProseMirror p.is-editor-empty:first-child::before {
  content: attr(data-placeholder);
  color: rgb(var(--color-secondary-400));
  font-size: 14px;
  line-height: 28px;
}

.animate-fade {
  animation: fadeUp ease-in;
  animation-timeline: view();
  animation-range: entry 0% cover 40%;
}

@keyframes fadeUp {
  from {
    opacity: 0;
    transform: translateY(30px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.tech-stack-section::before {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 60px;
  width: 30px;
  content: "";
  background: linear-gradient(
    to right,
    rgb(var(--background-app-rgb)),
    #00000000
  );
  z-index: 1;
}
.tech-stack-section::after {
  position: absolute;
  right: 0;
  bottom: 0;
  height: 60px;
  width: 30px;
  content: "";
  background: linear-gradient(
    to left,
    rgb(var(--background-app-rgb)),
    #00000000
  );
  z-index: 1;
}

.slider-wrapper {
  width: 100%;
  overflow: hidden;
}

.slider-group {
  display: flex;
  width: max-content;
  animation: infiniteScroll 30s infinite linear;
}

.slider-item {
  flex: 0 0 auto;
  width: 180px;
  display: grid;
  place-items: center;
  margin: 0 24px;
}

@keyframes infiniteScroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(50%);
  }
}

